Ajout de la feuille de style pour les formulaires - QWidgets

--- a/main.ui
+++ b/main.ui
@@ -13,7 +13,78 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QWidget" name="Form">
+   <property name="styleSheet">
+    <string notr="true">/* Styles for the info_frame element */
+#info_frame {
+  background-color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+ 
+/* Styles for labels, input fields, and combo boxes inside &quot;info_frame&quot; */
+#info_frame QLabel,
+#info_frame QLineEdit,
+#info_frame QComboBox,
+#function_frame QPushButton,
+QHeaderView::section {
+  font-family: Segoe UI Semibold;
+  font-size: 12px;
+}
+ 
+/* Styles for input fields and combo boxes inside info_frame */
+#info_frame QLineEdit,
+#info_frame QComboBox {
+  padding: 4px 5px;
+  border: 1px solid #838383;
+  border-radius: 2px;
+}
+ 
+/* Focus styles for input fields and combo boxes */
+#info_frame QLineEdit:focus,
+#info_frame QComboBox:focus {
+  border-color: #005fff;
+}
+ 
+/* Styles for combo boxes drop-down */
+QComboBox::drop-down {
+  background: transparent;
+  border: none;
+  margin-right: 5px;
+}
+ 
+/* Styles for the down-arrow icon in combo boxes */
+QComboBox::down-arrow {
+  image: url(:/icons/expand_more.svg);
+}
+ 
+/* Style for the result_frame */
+#result_frame {
+  border-radius: 5px;
+  background-color: #fff;
+}
+ 
+/* Style for border of QTableWidget */
+QTableWidget {
+  border-radius: 5px;
+  border: 1px solid #0f0f0f;
+}
+ 
+/* Style for table header section */
+QHeaderView::section {
+  border: none;
+  border-bottom: 1px solid #0fc6ff;
+  text-align: left;
+  padding: 3px 5px;
+}
+ 
+/* Styles for table items */
+QTableWidget::item {
+  border-bottom: 1px solid #0fc6ff;
+  color: #000;
+  padding-left: 5px;
+}</string>
+   </property>
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
@@ -31,7 +102,14 @@
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="label_7">
+      <widget class="QLabel" name="title_label_2">
+       <property name="font">
+        <font>
+         <family>Snell Roundhand</family>
+         <pointsize>40</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="text">
         <string>Students Information System</string>
        </property>
@@ -384,22 +462,6 @@
       </property>
      </column>
     </widget>
-   </widget>
-   <widget class="QLabel" name="title_label">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
-      <y>480</y>
-      <width>251</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignmentFlag::AlignCenter</set>
-    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
